RESOLVED FIXED37915
WebKit build failure with xhtmlmp enabled , after patches for Bug 37175
https://bugs.webkit.org/show_bug.cgi?id=37915
Summary WebKit build failure with xhtmlmp enabled , after patches for Bug 37175
Charles Wei
Reported 2010-04-21 02:14:34 PDT
With bug 37175, which factors out DocumentWriter from FrameLoader, the API FrameLoader::responseMIMEType() is now DocumentWriter::mimeType(). #if ENABLE(XHTMLMP) bool Document::isXHTMLMPDocument() const { ... return frame()->loader()->responseMIMEType() == "application/vnd.wap.xhtml+xml"; } #endif should be changed to : return frame()->loader()->writer()->mimeType() == "application/vnd.wap.xhtml+xml";
Attachments
This patch fixes the build problem caused by defect 37175 (only fails when xhtmlmp is enabled) (1.44 KB, patch)
2010-04-21 02:25 PDT, Charles Wei
no flags
Charles Wei
Comment 1 2010-04-21 02:25:04 PDT
Created attachment 53933 [details] This patch fixes the build problem caused by defect 37175 (only fails when xhtmlmp is enabled) This patch fixes the build problem caused by defect 37175 (only fails when xhtmlmp is enabled)
WebKit Commit Bot
Comment 2 2010-04-21 19:42:00 PDT
Comment on attachment 53933 [details] This patch fixes the build problem caused by defect 37175 (only fails when xhtmlmp is enabled) Clearing flags on attachment: 53933 Committed r58041: <http://trac.webkit.org/changeset/58041>
WebKit Commit Bot
Comment 3 2010-04-21 19:42:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.