2010-04-21  Charles Wei  <charles.wei@torchmobile.com.cn>

Reviewed by George Staikos.

        Fix webkit build problem when xhtmlmp enabled, which is introduced by revision 57927, for
        bug fix of 37175 , which seperates DocumentWriter from FrameLoader
        https://bugs.webkit.org/show_bug.cgi?id=37915

        No new tests since this only fixes the build problem.

        * dom/Document.cpp:
        (WebCore::Document::isXHTMLMPDocument):

Canonical link: https://commits.webkit.org/49322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58041 268f45cc-cd09-0410-ab3c-d52691b4dbfc